Enable terminal colors for cmd using win32 api