@@ -1,3 +1,3 @@
 @echo off
 rem Develop/Debug launch helper
-java -p target/classes -m copy.tool/ct.app.App %*
+java --enable-native-access=copy.tool -p target/classes -m copy.tool/ct.app.App %*
